welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: type mismatch;
 found   : Boolean(false)
 required: Int
	else {return false}
                     ^